fix Model.java